--- a/views/client/pages/user/booking.pug
+++ b/views/client/pages/user/booking.pug
@@ -2,7 +2,6 @@ extends ../../layouts/default.pug
 include ../../mixins/alert.pug
 include ../../mixins/moment.pug
 
-
 block main
   .container
     +alert-success(5000)
@@ -13,7 +12,7 @@ block main
         div(style="font-size: 14px;")
           a.text-secondary.text-decoration-none(href="/") Trang chủ 
           span.text-secondary >
-          a.text-secondary.text-decoration-none(href="#")  Phòng đã đặt
+          a.text-secondary.text-decoration-none(href="#") Phòng đã đặt
       each booking in bookings
         .col-md-4.px-4.mb-4
           .bg-white.p-3.rounded.shadow
@@ -40,21 +39,25 @@ block main
               +formatDate(booking.createdAt)
             if(booking.booking_status == "booked")
               p
-                span.badge.bg-success Dã đặt
+                span.badge.bg-success Đã đặt
             else if(booking.booking_status == "payment_failed")
               p
-                span.badge.bg-danger Dã hủy 
+                span.badge.bg-danger Đã hủy 
             else 
               p
-                span.badge.bg-warning  Đang thanh toán 
+                span.badge.bg-warning Đang thanh toán 
 
+            
             button.btn.btn-dark.btn-sm.shadow-none(
-              data-bs-target=`#reviewModal` 
+              data-bs-target=`#reviewModal${booking._id}` 
               data-bs-toggle="modal" 
               type="button"
             ) Đánh giá và nhận xét
 
-            #reviewModal.modal.fade(
+            
+            div(
+              id=`reviewModal${booking._id}`
+              class="modal fade"
               aria-hidden="true" 
               aria-labelledby="staticBackdropLabel" 
               tabindex="-1" 
@@ -75,7 +78,7 @@ block main
                         aria-label="Close" 
                         data-bs-dismiss="modal" 
                         type="reset"
-                        )
+                      )
                     .modal-body
                       .mb-3
                         label.form-label Đánh giá
@@ -91,11 +94,12 @@ block main
                           rows="3" 
                           name="review" 
                           type="text"
-                          )
+                        )
+                      // Trường ẩn chứa các ID cần thiết
                       input(
                         name="booking_id" 
                         type="hidden"
-                        value=booking.id
+                        value=booking._id
                       )
                       input(
                         name="room_id" 
@@ -103,12 +107,9 @@ block main
                         value=booking.room_id._id
                       )
                       input(
-                        name="usser_id" 
+                        name="user_id" 
                         type="hidden"
                         value=booking.user_id._id
                       )
                       .text-end
                         button.btn.custom-bg.text-white.shadow-none(type="submit") Gửi
-                  
-
-    
