6. Quản lí đặt phòng

--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -24,6 +24,8 @@
       li
         a(href=`${prefixAdmin}/users`) Quản lí người dùng
       li
+        a(href=`${prefixAdmin}/bookings`) Quản lí đặt phòng
+      li
         a(href=`${prefixAdmin}/contact`) Quản lí thư
       li
         a(href=`${prefixAdmin}/vouchers`) Voucher
