1. Giao diện phần carousel

--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -29,6 +29,8 @@
         a(href=`${prefixAdmin}/contact`) Quản lí thư
       li
         a(href=`${prefixAdmin}/vouchers`) Voucher
+      li 
+        a(href=`${prefixAdmin}/carousel`) Quảng cáo
       li
         a(href=`${prefixAdmin}/statistics`) Thống kê
       li
