--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -166,3 +166,111 @@
   display: block; /* Hiển thị ảnh dưới dạng khối */
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); /* Hiệu ứng đổ bóng cho ảnh */
 }
+
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+-webkit-appearance: none;
+margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+-moz-appearance: textfield;
+}
+
+.custom-bg {
+    background-color: #279e8c;
+    border: 1px solid  #279e8c;
+}
+
+
+.custom-bg:hover {
+    background-color: #279e8c;
+    border: #279e8c;
+
+}
+
+.h-line {
+    width: 150px;
+    margin: 0 auto;
+    height: 1.7px;
+}
+
+
+.availability-form {
+    margin-top: -150px;
+    z-index: 2;
+    position: relative;
+}
+
+.pop:hover {
+    border-top-color: var(--teal) !important;
+    transform: scale(1.03);
+    transition: all 0.3s;
+}
+
+.h-line {
+    width: 150px;
+    margin: 0 auto;
+    height: 1.7px;
+}
+
+.custom-alert {
+    position: fixed;
+    top: 80px;
+    right: 25px; 
+    z-index: 1111;
+
+}
+
+.availability-form {
+    margin-top: -50px;
+    z-index: 2;
+    position: relative;
+}
+
+/* Responsive */
+@media screen and (max-width: 575px) {
+    .availability-form {
+        margin-top: 25px ;
+        padding: 0 25px;
+    }
+}
+
+/* Show Alert */
+[show-alert] {
+    position: fixed;
+    top: 70px;
+    right: 15px;
+    z-index: 9999;
+  }
+  
+  [show-alert].alert-hidden {
+    animation-name: alert-hidden;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+  }
+  
+  @keyframes alert-hidden {
+    from {
+      right: 15px;
+    }
+    to {
+      right: -100%;
+      display: none;
+    }
+  }
+  
+  [show-alert] [close-alert] {
+    background: #ffffffc4;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    line-height: 24px;
+    text-align: center;
+    font-weight: 600;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  /* End Show Alert */  
