--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -10,15 +10,8 @@ html
       rel="stylesheet" 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     )
-    link(
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" 
-      rel="stylesheet"
-    )
-    link(
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" 
-      rel="stylesheet"
-    )
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css")
+    link(rel="stylesheet", href="/admin/css/base.css")
     link(rel="stylesheet", href="/admin/css/style.css")
   body
     if(role.permissions.length > 0)
@@ -35,7 +28,9 @@ html
 
 
       script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js") 
-      script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
+      script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js")
+      script(src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js")
+      script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js")
       //- TinyMCE
       script(src="/tinymce/tinymce.min.js")
       script(src="/admin/js/tinymce-config.js")
