--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -10,6 +10,10 @@ html
       rel="stylesheet" 
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     )
+    link(
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" 
+      rel="stylesheet"
+    )
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css")
     link(rel="stylesheet", href="/admin/css/base.css")
     link(rel="stylesheet", href="/admin/css/style.css")
