6. Thêm phần đánh giá ở trang chủ

--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -103,6 +103,23 @@ block main
       .col-lg-12.text-center.mt-5
         a.btn.btn-sm.btn-outline-dark.rounded-0.fw-bold.shadow-none(href="/facilities") Xem thêm chức năng
   
+
+  h2.mt-5.pt-4.mb-5.text-center.fw-bold.h-font Đánh giá
+  .container
+    .swiper.swiper-testimonials
+      .swiper-wrapper.mb-5
+        each review in reviews
+          .swiper-slide.bg-white.p-4
+            h6.m-0 #{review.user_id.fullName}
+            p
+              | #{review.review}
+            .rating
+              -for(let i=0; i < review.rating; i++)
+                i.bi.bi-star-fill.text-warning
+      .swiper-pagination
+    .col-lg-12.text-center.mt-5
+      a.btn.btn-sm.btn-outline-dark.rounded-0.fw-bold.shadow-none(href="about.php") Know more >>>
+
   //-  Gg map(Embed)
   h2.mt-5.pt-4.mb-4.text-center.fw-bold.h-font Liên hệ
   .container
