7. Làm phần giới thiệu

--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -25,6 +25,8 @@ nav(class="navbar navbar-expand-lg navbar-light bg-white px-lg-3 py-lg-2 shadow-
           a(class="nav-link me-2" href="/facilities") Dịch vụ
         li(class="nav-item")
           a(class="nav-link me-2" href="/contact") Liên hệ
+        li(class="nav-item")
+          a(class="nav-link me-2" href="/about") Giới thiệu
       div(class="d-flex")
         if(user)
           .btn-group
