8. Sửa đường script bên statistics

--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -118,7 +118,7 @@ block main
                 i.bi.bi-star-fill.text-warning
       .swiper-pagination
     .col-lg-12.text-center.mt-5
-      a.btn.btn-sm.btn-outline-dark.rounded-0.fw-bold.shadow-none(href="about.php") Know more >>>
+      a.btn.btn-sm.btn-outline-dark.rounded-0.fw-bold.shadow-none(href="/about") Xem thêm >>>
 
   //-  Gg map(Embed)
   h2.mt-5.pt-4.mb-4.text-center.fw-bold.h-font Liên hệ
