--- a/views/admin/pages/statistic/index.pug
+++ b/views/admin/pages/statistic/index.pug
@@ -24,8 +24,8 @@ block main
       #barchart_div(style="width: 100%; height: 300px;")
 
   script(src="https://www.gstatic.com/charts/loader.js")
-  script(src="/js/chart.js")
-  script(src="/js/statistic.js")
+  script(src="/admin/js/chart.js")
+  script(src="/admin/js/statistic.js")
 
   script.
     const overviewRevenue = !{overviewRevenue};
