--- a/views/admin/pages/rooms/index.pug
+++ b/views/admin/pages/rooms/index.pug
@@ -139,7 +139,7 @@ block main
     action=""
     method="POST"
     id="form-delete-item"
-    data-path=`${prefixAdmin}/accounts/delete`
+    data-path=`${prefixAdmin}/rooms/delete`
   )
   
-    script(src="/admin/js/script.js")
+    script(src="/admin/js/room.js")
